Do a very quick cleanup pass. There's lots more cleanup to do though